default/objects/success__AdHoc_Objective__c/success__AdHoc_Objective__c.object-meta.xml
<CustomObject>
    <description>Ad Hoc objectives are designed to track the completion of activities that are not recorded within Salesforce. Ad Hoc Objectives, therefore, comprise of a checklist of items that users can check off once they have been completed.</description>
    <label>Ad Hoc Objective</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ad Hoc Objectives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>