default/objects/success__AdHoc_Objective__c/fields/success__Coaching_Plan__c.field-meta.xml
<CustomField>
    <fullName>success__Coaching_Plan__c</fullName>
    <label>Coaching Plan</label>
    <referenceTo>success__Coaching_Plan__c</referenceTo>
    <relationshipLabel>AdHoc Objectives</relationshipLabel>
    <relationshipName>AdHoc_Objectives</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>