default/objects/success__AdHoc_Objective__c/fields/success__Comments__c.field-meta.xml
<CustomField>
    <fullName>success__Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>