default/objects/success__AdHoc_Objective__c/fields/success__Complete__c.field-meta.xml
<CustomField>
    <fullName>success__Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complete</label>
    <type>Checkbox</type>
</CustomField>