default/objects/success__AdHoc_Objective__c/fields/success__Completed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>success__Completed_Date_Time__c</fullName>
    <label>Completion Date</label>
    <type>DateTime</type>
</CustomField>